@@ -1318,7 +1318,7 @@ sub ParseStructDeclaration {
 	    push @result, "$mod1$ptype$ptr1$mod2 (*$pname) ($func_params)";
 	    
 	} else {
-	    warn "Cannot parse structure field $line";
+	    warn "Cannot parse structure field \"$line\"";
 	}
     }
     
@@ -1374,7 +1374,7 @@ sub ParseEnumDeclaration {
 	    last;
 
 	} else {
-	    warn "Cannot parse enumeration member $line";
+	    warn "Cannot parse enumeration member \"$line\"";
 	}
 
 	last if $terminator eq '}';
