@@ -1,3 +1,9 @@
+Wed Nov 21 16:50:35 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* gtkdoc-mkdb,tmpl.in: Add some extra quoting to
+	error messages to make it clearer what is going on
+	with trailing commas on enumeration declarations.
+
 Wed Nov 21 16:00:45 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* Applied patch from Matthias Clasen to use a modified
